@@ -1,3 +1,13 @@
+2010-07-06  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Unreviewed.
+
+        Fixes regression on API test by disabling the scrollbars before
+        configuring the adjustments.
+
+        * platform/gtk/ScrollViewGtk.cpp:
+        (WebCore::ScrollView::setGtkAdjustments):
+
 2010-07-06  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
